--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -5,6 +5,7 @@
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
+  margin: 0 auto;
 }
 
 @media (min-width: 500px) and (max-height: 400px) {
