--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+.BuildControlsContainer {
+  max-width: 900px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .OrderButton {
   background-color: #DAD735;
   outline: none;
@@ -18,6 +24,9 @@
   font-size: 1.2em;
   padding: 15px 30px;
   box-shadow: 2px 2px 2px #966909;
+  max-width: 200px;
+  margin: 20px auto;
+  display: block;
 }
 
 .OrderButton:hover, .OrderButton:active {
