--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -12,6 +12,16 @@
   transition: all 0.3s ease-out;
 }
 
+.Showtime {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.Hidetime {
+  opacity: 0;
+  transform: translateY(-100vh);
+}
+
 @media (min-width: 600px) {
   .Modal {
       width: 500px;
